fix(Smart Performance) VAN-21076 fix slider background color in high contrast mode.

--- a/vtr-ui/src/app/components/pages/page-smart-performance/children/subpage-schedule-scan/subpage-schedule-scan.component.scss
+++ b/vtr-ui/src/app/components/pages/page-smart-performance/children/subpage-schedule-scan/subpage-schedule-scan.component.scss
@@ -672,18 +672,6 @@ vtr-subpage-scanning {
 			z-index: 0;
 			background-color: #52ffeb;
 			background-image: linear-gradient(90deg, #52ffeb 25%, #04ff5d 100%);
-			@media #{$white-on-black} {
-				background-image: none;
-				background: $light;
-				box-shadow: none;
-				@include white-border;
-			}
-			@media #{$black-on-white} {
-				background-image: none;
-				background: $dark;
-				box-shadow: none;
-				@include black-border;
-			}
 			&::after{
 				position: absolute;
 				content: '';
@@ -698,6 +686,24 @@ vtr-subpage-scanning {
 				animation-timing-function: ease-in-out;
 				animation-iteration-count: 1;
 				animation-duration: 1s;
+			}
+			@media #{$white-on-black} {
+				background-image: none;
+				background: $light;
+				box-shadow: none;
+				@include white-border;
+				&::after{
+					background: $light;
+				}
+			}
+			@media #{$black-on-white} {
+				background-image: none;
+				background: $dark;
+				box-shadow: none;
+				@include black-border;
+				&::after{
+					background: $dark;
+				}
 			}
 			&::before{
 				position: absolute;
